newclay/test/Compiler/Propagation/Fail/CCodeBodyWithUnnamedReturns/main.clay

main() : Int __c__ """abort();""";

